// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A Movement test suite should generate a basic movement 1`] = `
Object {
  "events": Array [
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "LYDIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "LYDIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "D",
      "position": "III",
      "root": "F",
      "scaleName": "IONIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "D",
      "position": "VI",
      "root": "Bb",
      "scaleName": "LYDIAN",
      "type": "modulateMode",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1920,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "quarter": 1,
      "time": 0,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "quarter": 5,
      "time": 1920,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "F",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "quarter": 9,
      "time": 3840,
    },
    Object {
      "dur": 1920,
      "key": Object {
        "root": "Bb",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "quarter": 13,
      "time": 5760,
    },
  ],
}
`;

exports[`A Movement test suite should generate a long movement - turn rhythm 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "PHRYGIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "LYDIAN",
      "type": "modulateMode",
    },
    Object {
      "interval": "6m",
      "key": "F#",
      "position": "I",
      "root": "F#",
      "scaleName": "LYDIAN",
      "type": "modulate",
    },
    Object {
      "interval": "6M",
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "LYDIAN",
      "type": "modulate",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 3840,
      "isRest": false,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "next": 3840,
      "time": 0,
    },
    Object {
      "dur": 3840,
      "isRest": false,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "next": 7680,
      "time": 3840,
    },
    Object {
      "dur": 3840,
      "isRest": false,
      "key": Object {
        "root": "F#",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "next": 11520,
      "time": 7680,
    },
    Object {
      "dur": 3840,
      "isRest": false,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "next": 15360,
      "time": 11520,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - euclidean 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "PHRYGIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "LYDIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "VI",
      "root": "F#",
      "scaleName": "AEOLIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "IONIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "PHRYGIAN",
      "type": "modulateMode",
    },
    Object {
      "interval": "5P",
      "key": "F#",
      "position": "I",
      "root": "F#",
      "scaleName": "PHRYGIAN",
      "type": "modulate",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1440,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 1,
      "time": 0,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3M 4A 5P 6M 7M",
      },
      "quarter": 4,
      "time": 1440,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "F#",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "quarter": 7,
      "time": 2880,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3M 4P 5P 6M 7M",
      },
      "quarter": 9,
      "time": 3840,
    },
    Object {
      "dur": 1440,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 12,
      "time": 5280,
    },
    Object {
      "dur": 960,
      "key": Object {
        "root": "F#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "quarter": 15,
      "time": 6720,
    },
  ],
}
`;

exports[`A Movement test suite should generate a simple movement - turn rhythm 1`] = `
Object {
  "events": Array [
    Object {
      "key": "A",
      "position": "VI",
      "root": "F#",
      "scaleName": "AEOLIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "III",
      "root": "C#",
      "scaleName": "PHRYGIAN",
      "type": "modulateMode",
    },
    Object {
      "key": "A",
      "position": "VI",
      "root": "F#",
      "scaleName": "AEOLIAN",
      "type": "modulateMode",
    },
    Object {
      "interval": "6M",
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "AEOLIAN",
      "type": "modulate",
    },
    Object {
      "key": "A",
      "position": "IV",
      "root": "D",
      "scaleName": "DORIAN",
      "type": "modulateMode",
    },
    Object {
      "interval": "5P",
      "key": "A",
      "position": "I",
      "root": "A",
      "scaleName": "DORIAN",
      "type": "modulate",
    },
  ],
  "timeline": Array [
    Object {
      "dur": 1280,
      "isRest": false,
      "key": Object {
        "root": "F#",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "next": 1280,
      "time": 0,
    },
    Object {
      "dur": 1440,
      "isRest": false,
      "key": Object {
        "root": "C#",
        "scale": "1P 2m 3m 4P 5P 6m 7m",
      },
      "next": 2720,
      "time": 1280,
    },
    Object {
      "dur": 1440,
      "isRest": false,
      "key": Object {
        "root": "F#",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "next": 4160,
      "time": 2720,
    },
    Object {
      "dur": 1280,
      "isRest": false,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3m 4P 5P 6m 7m",
      },
      "next": 5440,
      "time": 4160,
    },
    Object {
      "dur": 1280,
      "isRest": false,
      "key": Object {
        "root": "D",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "next": 6720,
      "time": 5440,
    },
    Object {
      "dur": 960,
      "isRest": false,
      "key": Object {
        "root": "A",
        "scale": "1P 2M 3m 4P 5P 6M 7m",
      },
      "next": 7680,
      "time": 6720,
    },
  ],
}
`;
